# bioreader

./: .gitignore  Bioreader_14.spec  LICENCE.txt  README.md  pyproject.toml  requirements.txt  run.py
example_data/: Technogym_two_legged_b.txt  converted.xlsx
