[tool.poetry]
name = "bioreader"
version = "14"
description = ""
authors = ["ZofTG <lzoffoli@technogym.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
labio = {git = "https://github.com/ZofTG/labio.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
